@startuml mcd

title Modèle Conceptuel de Données (MCD) - Application bancaire

' Configuration pour MCD '
!define ENTITY entity
!define ATTRIBUTE attribute
!define RELATIONSHIP diamond

' Entités principales '

ENTITY Client {
    * client_id : VARCHAR(50) <<PK>>
    --
    nom : VARCHAR(100)
    prenom : VARCHAR(100)
    email : VARCHAR(150) <<UNIQUE>>
    telephone : VARCHAR(20)
    adresse : TEXT
    date_creation : DATE
    date_maj : DATETIME
}

ENTITY Conseiller {
    * conseiller_id : VARCHAR(50) <<PK>>
    --
    nom : VARCHAR(100)
    prenom : VARCHAR(100)
    email : VARCHAR(150) <<UNIQUE>>
    specialite : VARCHAR(100)
    date_embauche : DATE
    date_maj : DATETIME
}

ENTITY Administrateur {
    * admin_id : VARCHAR(50) <<PK>>
    --
    nom : VARCHAR(100)
    prenom : VARCHAR(100)
    email : VARCHAR(150) <<UNIQUE>>
    niveau : VARCHAR(50)
    date_creation : DATE
    date_maj : DATETIME
}

ENTITY Compte {
    * numero_compte : VARCHAR(50) <<PK>>
    --
    solde : DECIMAL(15,2)
    decouvert_autorise : DECIMAL(15,2)
    type_compte : ENUM('COURANT','EPARGNE','PROFESSIONNEL')
    date_ouverture : DATE
    statut : ENUM('ACTIF','FERME','SUSPENDU')
    date_maj : DATETIME
    * client_id : VARCHAR(50) <<FK>>
}

ENTITY Transaction {
    * transaction_id : VARCHAR(50) <<PK>>
    --
    montant : DECIMAL(15,2)
    type_transaction : ENUM('VIREMENT','DEPOT','RETRAIT','PAIEMENT_RECURRENT')
    date_transaction : DATETIME
    description : TEXT
    statut : ENUM('EN_ATTENTE','VALIDEE','ANNULEE')
    date_maj : DATETIME
    * compte_id : VARCHAR(50) <<FK>>
}

ENTITY Pret {
    * pret_id : VARCHAR(50) <<PK>>
    --
    montant : DECIMAL(15,2)
    taux_interet : DECIMAL(5,2)
    duree_mois : INTEGER
    statut : ENUM('EN_ATTENTE','APPROUVE','REFUSE','EN_COURS','REMBOURSE')
    date_debut : DATE
    date_fin : DATE
    mensualite : DECIMAL(15,2)
    date_maj : DATETIME
    * client_id : VARCHAR(50) <<FK>>
    conseiller_id : VARCHAR(50) <<FK>>
}

ENTITY Investissement {
    * investissement_id : VARCHAR(50) <<PK>>
    --
    type_investissement : VARCHAR(100)
    montant : DECIMAL(15,2)
    date_achat : DATE
    prix_unitaire : DECIMAL(10,4)
    quantite : DECIMAL(10,2)
    statut : ENUM('ACTIF','VENDU')
    date_maj : DATETIME
    * client_id : VARCHAR(50) <<FK>>
}

ENTITY RendezVous {
    * rendez_vous_id : VARCHAR(50) <<PK>>
    --
    date_heure_rendez_vous : DATETIME
    motif : TEXT
    statut : ENUM('PROGRAMME','CONFIRME','ANNULE','TERMINE')
    lieu : VARCHAR(200)
    type_rendez_vous : ENUM('PHYSIQUE','VISIO','TELEPHONIQUE')
    date_maj : DATETIME
    * client_id : VARCHAR(50) <<FK>>
    * conseiller_id : VARCHAR(50) <<FK>>
}

ENTITY Message {
    * message_id : VARCHAR(50) <<PK>>
    --
    contenu : TEXT
    date_envoi : DATETIME
    lu : BOOLEAN
    type_message : ENUM('CLIENT_TO_CONSEILLER','CONSEILLER_TO_CLIENT','SYSTEM')
    expediteur_id : VARCHAR(50)
    destinataire_id : VARCHAR(50)
    expediteur_type : ENUM('CLIENT','CONSEILLER','SYSTEM')
    destinataire_type : ENUM('CLIENT','CONSEILLER')
}

ENTITY Document {
    * document_id : VARCHAR(50) <<PK>>
    --
    nom : VARCHAR(255)
    type_document : VARCHAR(100)
    date_upload : DATETIME
    chemin_fichier : TEXT
    taille : INTEGER
    statut : ENUM('ACTIF','ARCHIVE','SUPPRIME')
    date_maj : DATETIME
    * client_id : VARCHAR(50) <<FK>>
}

ENTITY Notification {
    * notification_id : VARCHAR(50) <<PK>>
    --
    titre : VARCHAR(200)
    message : TEXT
    date_envoi : DATETIME
    lu : BOOLEAN
    type_notification : ENUM('INFO','ALERTE','RAPPEL')
    priorite : ENUM('BASSE','NORMALE','HAUTE')
    date_maj : DATETIME
    * client_id : VARCHAR(50) <<FK>>
}

' Table de liaison pour la relation many-to-many entre Client et Conseiller '
ENTITY Client_Conseiller {
    * client_id : VARCHAR(50) <<FK>>
    * conseiller_id : VARCHAR(50) <<FK>>
    --
    date_attribution : DATE
    statut : ENUM('ACTIF','INACTIF')
    date_maj : DATETIME
}

' Relations avec cardinalités '

' Un Client possède plusieurs Comptes (1:n)
Client ||--o{ Compte : "possède"

' Un Compte contient plusieurs Transactions (1:n)
Compte ||--o{ Transaction : "contient"

' Un Client peut avoir plusieurs Prêts (1:n)
Client ||--o{ Pret : "demande"

' Un Client peut avoir plusieurs Investissements (1:n)
Client ||--o{ Investissement : "réalise"

' Un Client peut avoir plusieurs Documents (1:n)
Client ||--o{ Document : "dépose"

' Un Client peut avoir plusieurs Notifications (1:n)
Client ||--o{ Notification : "reçoit"

' Relation many-to-many entre Client et Conseiller via table de liaison
Client ||--o{ Client_Conseiller
Client_Conseiller }o--|| Conseiller

' Un Conseiller peut gérer plusieurs Prêts (1:n)
Conseiller ||--o{ Pret : "traite"

' Relation many-to-many pour les RendezVous (Client et Conseiller)
Client ||--o{ RendezVous : "demande"
Conseiller ||--o{ RendezVous : "gère"

' Relations pour les Messages (relations complexes)
Client ||--o{ Message : "envoie/reçoit"
Conseiller ||--o{ Message : "envoie/reçoit"

note right of Client_Conseiller : Table de liaison pour\nla relation many-to-many\nentre Client et Conseiller

note bottom of Message : Les relations pour les messages\nsont gérées via les champs\nexpediteur_id/destinataire_id\net leurs types associés

@enduml